updated the alignment issues in the cart count section

--- a/src/pages/hotel-choose/hotel-choose.scss
+++ b/src/pages/hotel-choose/hotel-choose.scss
@@ -17,11 +17,10 @@ page-qr-code {
         width: 100%;
         opacity: 1;
         color: #FFFFFF;
-        text-align: center;
     }
     .cart > div {
         width: 35%;
-        padding: 2%;
+        padding: 2% 0 2% 10%;
         background: #2cd456;
     }
     .cart > div > span {
